[package]
name = "saturate"
version = "0.1.0"
authors = ["Andrés Sánchez <andres.sanchez@imdea.org>"]
edition = "2018"

[profile.dev]
opt-level = 3

[dependencies]
criterion = "*"

[build-dependencies]

[[bin]]
name = "saturate"
path = "src/main.rs"

[[bench]]
name = "sat_benchmarks"
path = "src/benchmark.rs"
harness = false
